# research-engineering-intern-assignment

./: Prompts.md  README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: clusterquery_fastapi.py  convert_csv_to_json.py  dashboard_fastapi.py  generate_embeddings.py  main.py  report_fastapi.py  routing_fastapi.py
backend/app/api_routes/: data_routes.py  routes.py
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/api/news/: route.js
frontend/src/app/chatbot/: ReportDisplay.jsx  Visualization.jsx  chat-ui.jsx  page.jsx
frontend/src/app/components/: CustomDateRangePicker.jsx  NewsCard.jsx  Visualization.jsx
frontend/src/app/components/ui/: sidebar.jsx  tabs.jsx
frontend/src/app/dashboard/: line-chart.tsx  page.jsx
frontend/src/app/dashboard/components/: Charts.jsx  ListCards.jsx  StatsCards.jsx
frontend/src/app/news/: page.jsx
frontend/src/app/visualize/: page.jsx
